packages/rust/holy/tests/fail/07-fuzz-enum.rs
use holy::Fuzz;

#[derive(Fuzz)]
enum Nope {
	A,
	B,
}

fn main() {}
